--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,31 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="ToolBarStyle" parent="ThemeOverlay.AppCompat.ActionBar">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="android:background">?attr/colorPrimary</item>
-        <item name="android:elevation">4dp</item>
-        <item name="android:popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-    </style>
     <style name="TextView" parent="TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">8dp</item>
-        <!--<item name="android:textSize">20dp</item>-->
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:textSize">20dp</item>
     </style>
     <style name="TextViewBold" parent="TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_margin">10dp</item>
         <item name="android:textStyle">bold</item>
-        <!--<item name="android:textSize">20dp</item>-->
+        <item name="android:textSize">20dp</item>
     </style>
 
 </resources>
