add logo image's contentDesc string.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         >
         <ImageView
+            android:contentDescription="@string/git_logo_desc"
             android:id="@+id/iv_git_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
